<resources>
    <string name="app_name">UCreate</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_catalog">Catálogo</string>

    <string name="margin">15dp</string>
    <string name="height_space">25dp</string>
    <string name="size_title">25sp</string>
    <string name="size_subtitle">20sp</string>
    <string name="size_context">15sp</string>

    <string name="title_activity_intro">IntroActivity</string>
    <string name="slogan">Creando oportunidades</string>

    <string name="title_activity_help">Ayuda</string>
    <string name="navigating">Navegando por la aplicación</string>
    <string name="navigating_content">En la aplicación se prestenta dos barras principales para
    la navegación. La de hasta arriba contiene el logo y el título de la aplicación. Además contiene
    un botón de ayuda y uno de información. Seleccione uno de estos dos para obtener ayuda acerca de
    como utilizar la aplicación o para obtener información acerca de esta aplicación. Debajo de esta
    barra está la barra de navegación de pestañas. Para navegar a las diferentes pestañas seleccione
    una de ellas o deslice su dedo hacia el lado donde se encuentre la pestaña a la que desea llegar.
    </string>
    <string name="first_fragment">En la primera pestaña se puede observar el inicio de lo que es el
    demo de la aplicación. Para seleccionar una plantilla seleccione uno de los botones que se
    encuentran en la pantalla. </string>
    <string name="second_fragment">La segunda pestaña presenta información acerca de quién es UCreate,
    su misión, su visión y sus valores.</string>
    <string name="third_fragment">La tercera pesataña presenta información para poder contactar a
    UCreate. Para contactarlos selecciona uno de los textos en color azul y se dará acceso a la
    ventana correspondiente según tu eleeción de contactarnos.</string>
    <string name="using_demo">Utilizando las plantillas del DEMO</string>
    <string name="using_demo_content">Una vez te encuentres dentro de una plantilla, selecciona el
    objeto del menú que quierás colocar y arrastralo hacia la posición donde lo quieras colocar.
    </string>

    <string name="tab_button_createYourApp">Crea tu\n app</string>
    <string name="tab_button_aboutUs">Acerca de\n UCreate</string>
    <string name="tab_button_contactUs">Contáctanos</string>

    <string name="demo_title">Crea tu app: DEMO</string>
    <string name="demo_inst">Aquí podrás descubrir la gran oportunidad que tienes y puedes iniciar con nosotros.
        Empecemos: Sigue estos sencillos pasos para crear tu modelo gráfico de negocio.
    </string>
    <string name="demo_select">Selecciona tu plantilla:</string>

    <string name="intro">Actualmente la tecnología se presenta como una herramienta.
        Queremos entregártela como la oportunidad, mediante apps, para expandir tu mercado.
    </string>
    <string name="mission">MISIÓN</string>
    <string name="vision">VISIÓN</string>
    <string name="values">VALORES</string>
    <string name="mission_content">Promover  el crecimiento de mercado de las empresas mediante el
        uso de aplicaciones móviles.
    </string>
    <string name="vision_content">Ser la empresa líder de Guatemala desarrolladora de aplicaciones
        para las plataformas Android y iOS.
    </string>
    <string name="punctuality">•  Puntualidad:</string>
    <string name="honesty">•  Honestidad:</string>
    <string name="quality">•  Calidad:</string>
    <string name="passion">•  Pasión:</string>
    <string name="empathy">•  Empatía:</string>
    <string name="punctuality_content">entrega en el tiempo establecido.</string>
    <string name="honesty_content">compromiso total con el cliente.</string>
    <string name="quality_content">funcionalidad efectiva.</string>
    <string name="passion_content">reflejamos la excelencia en nuestros productos.</string>
    <string name="empathy_content">respeto por las personas relacionadas y compromiso por su éxito.</string>

    <string name="phone_number">Teléfono:</string>
    <string name="email">Correo electrónico:</string>
    <string name="facebook">Síguenos en Facebook:</string>
    <string name="twitter">Síguenos en Twitter:</string>

    <string name="step_1">1. Plantilla</string>
    <string name="step_2">2. Diseño</string>
    <string name="step_3">3. Detalles</string>

    <string name="phone_content">+502-40112305</string>
    <string name="email_content">ucreatesa@hotmail.com</string>
    <string name="facebook_content">Visitar página de Facebook</string>
    <string name="twitter_content">Nuestro Twitter</string>
    <string name="change_background">Cambiar el color de fondo</string>
    <string name="title_activity_user_catalog">UserCatalogActivity</string>

    <string name="logo_title">Título del logo</string>
    <string name="enter_logo_title">Escriba el título del logo..</string>
    <string name="edit_logo">Editar Logo</string>
    <string name="orientation">Orietación</string>
    <string name="enter_orientation">Seleccione la orientación</string>
    <string name="left">Izquierda</string>
    <string name="center">Centrado</string>
    <string name="right">Derecha</string>

    <string name="change_options">Cambiar</string>
    <string name="change_logo_option">Cambiar Logo</string>
    <string name="change_title_option">Cambiar Título Logo</string>
    <string name="change_orientation_option">Cambiar Orientación</string>
    <string name="change_color_title_option">Cambiar Color del Título</string>
    <string name="change_card_color_title_option">Cambiar Color de Carta</string>

    <string name="edit_item">Editar Item</string>
    <string name="change_color_item_option">Cambiar Color de Texto</string>
    <string name="change_backgroundcolor_item_option">Cambiar Color del Borde</string>

    <string name="group">Grupo</string>
    <string name="select_color">Seleccione el color</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="show_catalog">Vista Previa</string>

    <string name="BuyButton">Comprar</string>
    <string name="DescriptionButton">Descripción</string>
    <string name="RatingButton">Calificación</string>
    <string name="CommentsButton">Comentarios</string>
    <string name="title_activity_catalog_final">CatalogFinalActivity</string>

    <string name="group1">Grupo 1</string>
    <string name="group2">Grupo 2</string>
    <string name="group3">Grupo 3</string>
    <string name="group4">Grupo 4</string>
    <string name="group5">Grupo 5</string>
    <string name="title_activity_contact_us_end">ContactUsEndActivity</string>
    <string name="title_activity_my_dialog">MyDialog</string>

    <string name="reset">Empezar de nuevo</string>
</resources>
