<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigating"
            android:id="@+id/textViewNavigating"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigating_content"
            android:id="@+id/textViewNavigatingContent"
            android:textSize="15sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_fragment"
            android:id="@+id/textViewFirstFragment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_fragment"
            android:id="@+id/textViewSecondFragment" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_fragment"
            android:id="@+id/textViewThirdFragment" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/using_demo"
            android:id="@+id/textViewUsingDemo"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/using_demo_content"
            android:id="@+id/textViewUsUsingDemoContent"
            android:textSize="15sp"
            android:textStyle="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>
</ScrollView>