<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff000000">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/solologo"
        android:scrollbars="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:id="@+id/textViewUsIntro"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission"
                android:id="@+id/textViewUsMission"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_content"
                android:textColor="@color/white"
                android:id="@+id/textViewUsMissionContent"
                android:textSize="15sp"
                android:textStyle="normal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:textColor="@color/white"
                android:id="@+id/textViewUsVision"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision_content"
                android:textColor="@color/white"
                android:id="@+id/textViewUsVisionContent"
                android:textSize="15sp"
                android:textStyle="normal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/values"
                android:textColor="@color/white"
                android:id="@+id/textViewUsValues"
                android:textStyle="bold"
                android:textSize="25sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/punctuality"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesPunctuality"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/punctuality_content"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesPunctualityContent"
                    android:textSize="15sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/honesty"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesHonesty"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/honesty_content"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesHonestyContent"
                    android:textSize="15sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quality"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesQuality"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/quality_content"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesQualityContent"
                    android:textSize="15sp"
                    android:textStyle="normal"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/passion"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesPassion"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/passion_content"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesPassionContent"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/empathy"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesEmpathy"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/empathy_content"
                    android:textColor="@color/white"
                    android:id="@+id/textViewUsValuesEmpathyContent"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>