<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:id="@+id/fondoContacto"
    android:background="@drawable/fondo_contact_us">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="#6a000000"
        android:baselineAligned="false">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:id="@+id/textViewContactPhone"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_content"
            android:id="@+id/buttonContactPhoneInfo"
            android:background="@drawable/button_contacts"
            android:layout_gravity="right"
            android:textSize="15sp"
            android:onClick="onClickNumber"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"
            android:id="@+id/textViewContactEmail"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_content"
            android:id="@+id/buttonContactEmailInfo"
            android:background="@drawable/button_contacts"
            android:layout_gravity="right"
            android:textSize="15sp"
            android:onClick="onClickNumber"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:id="@+id/textViewContactFacebook"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_content"
            android:id="@+id/buttonContactFacebookInfo"
            android:background="@drawable/button_contacts"
            android:layout_gravity="right"
            android:textSize="15sp"
            android:onClick="onClickNumber"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </LinearLayout>
</ScrollView>