<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="horizontal"
    android:background="@drawable/fondo2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/demo_title"
        android:textColor="@color/white"
        android:id="@+id/textViewDemoTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="normal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="15sp"
            android:text="@string/demo_inst"
            android:textColor="@color/white"
            android:id="@+id/textViewDemoContent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/demo_select"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/textViewSelectTemplate" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="Catalogo"
                android:id="@+id/buttonCatalogTemplate"
                android:layout_gravity="center_horizontal"
                android:textColor="#fffffbff" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>